[package]
name = "state_codec"
version = "0.1.0"
edition = "2021"

[dependencies]
parity-scale-codec = "3.0"
scale-info = { version = "2.0", features = ["derive"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-hex = "0.1"
wasm-bindgen = "0.2"



[lib]
crate-type = ["cdylib", "staticlib"]
